<resources>
    <string name="app_name">Just Go</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="sign_up">Create a new Account</string>
    <string name="welcome_to">Welcome back</string>
    <string name="create_a_new_account">Create a new Account</string>
    <string name="set_email">Email</string>
    <string name="set_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registration_signup">Sign Up</string>
    <string name="registration_login">Already have an Account?</string>
    <string name="change_your_data">Change your data</string>
    <string name="logout">Log Out</string>
    <string name="add_profile_picture">Add profile picture</string>
    <string name="user_name">Name</string>
    <string name="user_surname">Surname</string>
    <string name="profile_email">Email</string>
    <string name="profile_country">Country</string>
    <string name="profile_picture">Profile picture</string>
    <string name="deactive_account">Deactive Account</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_my_trips">My Trips</string>
    <string name="menu_utilities">Utilities</string>
    <string name="menu_bug_report">Report a Bug</string>
    <string name="menu_check_for_updates">Check for updates</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_text">Enter an email on which you will get link for entering a new password</string>
    <string name="send_link">Send link</string>
    <string name="current_time">Current Time</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_trip">Add new trip</string>
    <string name="view_old_trips">View old trips</string>

    <string name="user_country">Country</string>

</resources>
