<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/log_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="top|center"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".Login">

    <LinearLayout
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_margin="5sp"
        android:layout_weight="1"
        android:gravity="top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:gravity="center"
            android:text="@string/welcome_to"
            android:textColor="@color/mainText"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/login_avatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/login_avatar" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_data"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_margin="5sp"
        android:layout_weight="1"
        android:gravity="center_vertical|center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/mainText"
            android:textColorHint="@color/textHint" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/mainText"
            android:textColorHint="@color/textHint" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_buttons"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_margin="5sp"
        android:layout_weight="1"
        android:gravity="bottom|center"
        android:orientation="vertical">

        <Button
            android:id="@+id/login"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:backgroundTint="@color/backgroundButton"
            android:text="@string/login"
            android:textColor="@color/textButten"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/go_to_create_account"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:backgroundTint="@color/backgroundButton"
            android:text="@string/sign_up"
            android:textColor="@color/textButten"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/forgot_password"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:text="@string/forgot_password"
            android:textColor="@color/textButten"
            android:textAllCaps="false" />
    </LinearLayout>



</LinearLayout>