<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".FogotPassword">

    <TextView
        android:id="@+id/forgot_pass_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:background="@color/backgroundText"
        android:gravity="center"
        android:text="@string/forgot_password_text"
        android:textColor="@color/mainText"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/forgot_pass_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/mainText"
        android:textColorHint="@color/textHint" />

    <Button
        android:id="@+id/forgot_pass_btn"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:backgroundTint="@color/backgroundButton"
        android:text="@string/send_link"
        android:textColor="@color/textButten"
        android:textAllCaps="false" />
</LinearLayout>