<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="top|center"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".Profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical" >

        <!-- Ukljuci Toolbar (toolbar_main) -->
        <include
            android:id="@+id/profile_toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_margin="5sp"
        android:layout_weight="7"
        android:background="@color/colorPrimary"
        android:gravity="top"
        android:orientation="vertical"
        android:weightSum="4">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_margin="5sp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="2"
                android:contentDescription="@string/profile_picture"
                app:srcCompat="@drawable/profile_picture" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/user_name"
                    android:textSize="20sp"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/user_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"
                    android:gravity="center"
                    android:ems="10"
                    android:hint="@string/user_surname"
                    android:textSize="20sp"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/user_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/user_country"
                    android:textSize="20sp"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/email"
                    android:textSize="20sp"
                    android:inputType="textEmailAddress" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_margin="5sp"
            android:layout_weight="2"
            android:gravity="top"
            android:orientation="vertical">

            <!--<Button-->
                <!--android:id="@+id/btn_add_picture"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_margin="5sp"-->
                <!--android:backgroundTint="@color/backgroundButton"-->
                <!--android:text="@string/add_profile_picture"-->
                <!--android:textAllCaps="false"-->
                <!--android:textColor="@color/textButten" />-->

            <Button
                android:id="@+id/btn_change_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:backgroundTint="@color/backgroundButton"
                android:text="@string/change_your_data"
                android:textAllCaps="false"
                android:textColor="@color/textButten" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_margin="5sp"
        android:layout_weight="3"
        android:gravity="bottom|center"
        android:orientation="vertical">


        <Button
            android:id="@+id/btn_logout"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:backgroundTint="@color/backgroundButton"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textColor="@color/textButten" />

        <Button
            android:id="@+id/btn_deactive"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:backgroundTint="@color/backgroundButton"
            android:text="@string/deactive_account"
            android:textAllCaps="false"
            android:textColor="@color/textButten"
            android:textColorLink="@color/backgroundText" />
    </LinearLayout>

</LinearLayout>